# MultiPhysicsFEMSolver-Dev

./: README.md
applications/ConcentrationDiffusionApplication/: CMakeLists.txt  ConcentrationDiffusionApplication.json  ConcentrationDiffusionApplication.py  concentration_diffusion_application.cpp  concentration_diffusion_application.h  concentration_diffusion_application_variables.cpp  concentration_diffusion_application_variables.h
applications/ConcentrationDiffusionApplication/_kratos_includes/: concentration_diffusion_settings.h
applications/ConcentrationDiffusionApplication/custom_conditions/: axisymmetric_concentration_face.cpp  axisymmetric_concentration_face.h  concentration_face_condition.cpp  concentration_face_condition.h  concentration_flux_condition.cpp  concentration_flux_condition.h
applications/ConcentrationDiffusionApplication/custom_elements/: axisymmetric_eulerian_concentration_diffusion.cpp  axisymmetric_eulerian_concentration_diffusion.h  concen_diff_2d.cpp  concen_diff_2d.h  concen_diff_3d.cpp  concen_diff_3d.h  eulerian_concen_diff.cpp  eulerian_concen_diff.h  eulerian_diff.h
applications/ConcentrationDiffusionApplication/custom_python/: add_custom_strategies_to_python.cpp  add_custom_strategies_to_python.h  add_custom_utilities_to_python.cpp  add_custom_utilities_to_python.h  kratos_concentration_diffusion_python_application.cpp
applications/ConcentrationDiffusionApplication/custom_utilities/: face_concentration_utilities.h
applications/ConcentrationDiffusionApplication/python_scripts/: apply_concentration_face_process.py  concentration_diffusion_analysis.py  concentration_diffusion_solver.py  concentration_diffusion_stationary_solver.py  concentration_diffusion_transient_solver.py  python_solvers_wrapper_concentration_diffusion.py
applications/ConcentrationDiffusionApplication/tests/: generalTests.py  test_ConcentrationDiffusionApplication.py
applications/ConstitutiveLawsSmallStrainApplication/: .cproject  .project  CMakeLists.txt  ConstitutiveLawsSmallStrainApplication.json  ConstitutiveLawsSmallStrainApplication.py  README.md  constitutive_laws_small_strain_application.cpp  constitutive_laws_small_strain_application.h  constitutive_laws_small_strain_application_variables.cpp  constitutive_laws_small_strain_application_variables.h
applications/ConstitutiveLawsSmallStrainApplication/custom_processes/: element_deactivation_process.cpp  element_deactivation_process.h
applications/ConstitutiveLawsSmallStrainApplication/custom_python/: add_custom_constitutive_laws_to_python.cpp  add_custom_constitutive_laws_to_python.h  add_custom_processes_to_python.cpp  add_custom_processes_to_python.h  add_custom_utilities_to_python.cpp  add_custom_utilities_to_python.h  constitutive_laws_small_strain_python_application.cpp
applications/ConstitutiveLawsSmallStrainApplication/custom_utilities/: advanced_constitutive_law_small_strain_utilities.cpp  advanced_constitutive_law_small_strain_utilities.h  automatic_differentiation_tangent_utilities.cpp  automatic_differentiation_tangent_utilities.h  constitutive_law_utilities.cpp  constitutive_law_utilities.h  tangent_operator_calculator_utility.h
applications/ConstitutiveLawsSmallStrainApplication/python_scripts/: apply_pre_stressing_imposed_strain_process.py  element_deactivation_process.py
applications/StructuralAnalysisApplication/: CMakeLists.txt  StructuralAnalysisApplication.py  structural_analysis_application.cpp  structural_analysis_application.h  structural_analysis_application_variables.cpp  structural_analysis_application_variables.h
applications/StructuralAnalysisApplication/custom_conditions/: axisym_line_load_condition_2d.cpp  axisym_line_load_condition_2d.h  axisym_point_load_condition.cpp  axisym_point_load_condition.h  base_load_condition.cpp  base_load_condition.h  displacement_control_condition.cpp  displacement_control_condition.h  line_load_condition.cpp  line_load_condition.h  moving_load_condition.cpp  moving_load_condition.h  point_load_condition.cpp  point_load_condition.h  small_displacement_line_load_condition.cpp  small_displacement_line_load_condition.h  small_displacement_surface_load_condition_3d.cpp  small_displacement_surface_load_condition_3d.h  surface_load_condition_3d.cpp  surface_load_condition_3d.h
applications/StructuralAnalysisApplication/custom_constitutive/: axisym_elastic_isotropic.cpp  axisym_elastic_isotropic.h  elastic_isotropic_3d.cpp  elastic_isotropic_3d.h  linear_plane_strain.cpp  linear_plane_strain.h  linear_plane_stress.cpp  linear_plane_stress.h  user_provided_linear_elastic_law.cpp  user_provided_linear_elastic_law.h
applications/StructuralAnalysisApplication/custom_elements/: axisym_small_displacement.cpp  axisym_small_displacement.h  base_solid_element.cpp  base_solid_element.h  nodal_concentrated_element.cpp  nodal_concentrated_element.hpp  small_displacement.cpp  small_displacement.h  small_displacement_mixed_volumetric_strain_element.cpp  small_displacement_mixed_volumetric_strain_element.h
applications/StructuralAnalysisApplication/custom_io/: gid_eigen_io.h  vtk_eigen_output.cpp  vtk_eigen_output.h
applications/StructuralAnalysisApplication/custom_processes/: compute_center_of_gravity_process.cpp  compute_center_of_gravity_process.h  distribute_load_on_surface_process.cpp  distribute_load_on_surface_process.h  impose_z_strain_process.cpp  impose_z_strain_process.h  postprocess_eigenvalues_process.cpp  postprocess_eigenvalues_process.h  set_automated_initial_variable_process.cpp  spr_error_process.cpp  (+12 more)
applications/ThermDiffStructPhaseApplication/: CMakeLists.txt  README.md  ThermDiffStructPhaseApplication.py  therm_diff_struct_phase_application.cpp  therm_diff_struct_phase_application.h  therm_diff_struct_phase_application_variables.cpp  therm_diff_struct_phase_application_variables.h
applications/ThermalConductionApplication/: CMakeLists.txt  ThermalConductionApplication.py  thermal_conduction_application.cpp  thermal_conduction_application.h  thermal_conduction_application_variables.cpp  thermal_conduction_application_variables.h
(+369 files in other folders)
